# ULTIMATE_COACH_BACKEND

./: .env.example  .gitignore  AI_COACH_INTELLIGENCE_ANALYSIS.md  APPLY_MIGRATION_038.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS_SUMMARY.md  CLAUDE.md  COACH_MEAL_LOGGING_FIX.md  COACH_SERVICE_SPLIT_DESIGN.md  CONSULTATION_KEYS_GUIDE.md  CONSULTATION_MEMORY_AND_SEEDING.md  CONSULTATION_SECURITY.md  Dockerfile  EMAIL_VALIDATION_FIX.md  FINAL_ARCHITECTURE.md  FOOD_SEARCH_DIAGNOSTIC.sql  FOOD_SEARCH_FIX.sql  FOOD_SEARCH_FIX_GUIDE.md  FOOD_SEARCH_POSTGREST_CRASH_DIAGNOSTIC.sql  FOOD_SEARCH_POSTGREST_CRASH_FIX_GUIDE.md  GRAM_BASED_LOGGING_FIX.md  HAIKU_SDK_FIX_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_FINAL_STATUS.md  INTEGRATION_TEST_REPORT.md  LLM_CONSULTATION_COMPLETE.md  LOADING_STATE_IMPLEMENTATION.md  LOADING_STATE_UX.md  LOGGING_FIX_SUMMARY.md  MEMORY_ARCHITECTURE.md  MESSAGE_FORMATTING.md  MIGRATION_012_GUIDE.md  MIGRATION_STATUS.md  NEXT_STEPS.md  PERSONALITY_GUIDE.md  PERSONALIZED_COACHING_ARCHITECTURE.md  PHASE_1_2_TESTING_GUIDE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PLAN.md  (+35 more)
.claude/: settings.local.json
app/: __init__.py  config.py  db.py  main.py
docs/: PLANNING_AND_ADAPTIVE_API.md
email_templates/: change_email.html  confirm_signup.html  invite_user.html  magic_link.html  reauthentication.html  reset_password.html
migrations/: 001_IMPROVED_schema.sql  002_onboarding_data.sql  003_consultation_system.sql  004_seed_exercises.sql  005_consultation_messages.sql  006_IMPROVED_schema_fix.sql  007_seed_common_foods.sql  008_consultation_keys.sql  009_food_composition_and_quick_meals.sql  010_meal_items_performance_index.sql  011_body_metrics_tracking.sql  011_update_training_modalities.sql  012_body_metrics_add_height.sql  012_fix_activities_schema_and_add_exercise_sets.sql  012_seed_proteins_extended.sql  013_seed_carbs_grains.sql  014_seed_fats_dairy.sql  015_seed_restaurant_mcdonalds.sql  016_seed_restaurant_chains.sql  017_seed_beverages_extended.sql  018_seed_branded_products.sql  019_seed_brazilian_foods.sql  020_coach_embeddings.sql  020_seed_snacks_treats.sql  021_quick_entry_logs.sql  021_seed_condiments_sauces.sql  022_activity_metrics_validation.sql  022_add_system_ai_providers.sql  022_seed_desserts_extended.sql  (+43 more)
(+290 files in other folders)
